Added the Guardfile

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+/config/database.yml
 
 #Ignore other unneeded files
 database.yml
@@ -24,3 +25,4 @@ doc/
 .DS_Store
 .idea
 .secret
+bundler_stubs/
